# a-memory-library

./: AUTHORS  BUILDING.md  CMakeLists.txt  Dockerfile  NOTICE  README.md
examples/how_can_i_allocate_memory_with_a_specific_alignment_requirement_for_example_when_using_simd_instructions.txt/src/: main.c
examples/how_can_i_duplicate_strings_or_raw_data_with_alignment_considerations_using_the_pool_functions.txt/src/: main.c
examples/how_can_i_initialize_a_memory_pool_and_then_allocate_memory_for_my_data_structures.txt/src/: main.c
examples/how_can_i_leverage_the_base64_encoding_and_decoding_functionalities_provided_by_the_library_in_my_applications.txt/src/: main.c
examples/how_do_i_adjust_the_pools_growth_behavior_by_setting_a_minimum_growth_size_to_better_suit_my_allocation_patterns.txt/src/: main.c
examples/how_do_i_create_a_nested_pool_from_an_existing_pool_to_manage_temporary_or_scoped_allocations.txt/src/: main.c
examples/how_do_i_use_the_save_and_restore_mechanism_to_temporarily_allocate_memory_and_then_roll_back_to_a_previous_state.txt/src/: main.c
examples/what_approaches_does_the_library_offer_to_allocate_and_format_strings_using_printf-style_formatting.txt/src/: main.c
examples/what_is_the_best_way_to_clear_or_destroy_the_pool_to_reclaim_all_allocated_memory_in_one_operation.txt/src/: main.c
examples/what_options_are_available_for_splitting_strings_especially_when_i_need_to_handle_escape_characters_or_ignore_empty_tokens.txt/src/: main.c
include/a-memory-library/: aml_alloc.h  aml_buffer.h  aml_pool.h
include/a-memory-library/extras/: aml_block_allocator.h
include/a-memory-library/extras/impl/: aml_block_allocator.h
include/a-memory-library/impl/: aml_buffer.h  aml_pool.h
src/: aml_alloc.c  aml_buffer.c  aml_pool.c
tests/: CMakeLists.txt  build.sh
tests/src/: test_aml_alloc.c  test_aml_buffer.c  test_aml_pool.c
